# smartsearch

./: README.md  README.zh-CN.md  package-lock.json  package.json  pyproject.toml
.github/releases/: v0.1.13.md
.github/workflows/: publish-npm.yml
.trellis/spec/backend/: provider-capability-contract.md
.trellis/workspace/dxt98/: index.md  journal-1.md
skills/smart-search-cli/: SKILL.md
skills/smart-search-cli/references/: cli-contract.md  cli-core.md  command-patterns.md  deep-research-mode.md  provider-routing.md
src/smart_search/: cli.py  config.py  service.py  sources.py  utils.py
src/smart_search/assets/skills/smart-search-cli/: SKILL.md
src/smart_search/assets/skills/smart-search-cli/references/: cli-contract.md  command-patterns.md  provider-routing.md  setup-config.md
src/smart_search/providers/: __init__.py  camofox.py  jina.py  openai_compatible.py  xai_responses.py  zhipu_mcp.py
tests/: test_cli.py  test_config_dir_override.py  test_jina_provider.py  test_openai_compatible_provider.py  test_regression.py  test_release_workflow.py  test_service.py  test_smoke.py  test_sources.py  test_zhipu_mcp_provider.py
